# kenshu

./: .gitignore  20260330.tex  README.md  main.py  pyproject.toml
.cache/calibration/: koch.pkl
.devcontainer/: devcontainer.json
L1/: 1-3.py
kadai1/: 1-3.py  1-3dataunit.py  1-4.py
kadai1/1-10/: main.py
kadai1/1-10/conf/: config.yaml
kadai1/1-10/output/: best_model.safetensors
kadai1/1-10/wandb/: latest-run
kadai1/1-5/: main.py
kadai1/1-6/: main.py
kadai1/1-7/: main.py
kadai1/1-7/conf/: config.yaml
kadai1/1-7/output/: best_model.safetensors
kadai1/1-7/wandb/: latest-run
kadai1/1-8/: main.py
kadai1/1-8/conf/: config.yaml
kadai1/1-8/output/: best_model.safetensors
kadai1/1-8/wandb/: latest-run
kadai1/1-9/: main.py
kadai1/1-9/conf/: config.yaml
kadai1/1-9/output/: best_model.safetensors
kadai1/1-9/wandb/: latest-run
kadai2/2-4/: generate.py  main.py
kadai2/2-4/conf/: config.yaml
kadai2/2-4/wandb/: latest-run
kadai3/: main.py  make_right_grid.py  pca_vision_features.py  plot_joint_normalized.py  show_t0_image.py  test.py  use_image.py  visualize_right_exist_t0.py
kadai3 /: main.py  plot_joint_normalized.py  use_followerdata.py  use_image.py  use_leaderdata.py
kadai3 /conf/: config.yaml
kadai3 /src/: config_schema.py
kadai3 /src/dataloader/: episode_dataset.py
kadai3 /src/models/: policy.py  vision.py  vision_policy.py
kadai3 /src/trainer/: trainer.py
kadai3 /wandb/: latest-run
kadai3/conf/: config.yaml
kadai3/src/: concat.sh  config_schema.py
kadai3＿tmp/conf/: config.yaml
template/: date.tex
(+489 files in other folders)
