[project]
name = "kenshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box>=0.1.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "python-box>=7.3.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]
